jenkins/dev-jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  name: dev-jenkins
  labels:
    component: dev-jenkins
spec:
  replicas: 0
  selector:
    matchLabels:
      component: dev-jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: dev-jenkins
    spec:
      containers:
        - name: dev
          image: centos
          command:
            - "sh"
            - "-c"
          args:
            - "yum install -y nfs-utils nmap unzip wget java zip && wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-5.2.zip && unzip apache-jmeter-5.2.zip && sleep 99999999"
          securityContext:
            privileged: true
          resources:
            requests:
              memory: 100Mi
          volumeMounts:
            - mountPath: "/mnt/jenkins-home"
              name: jenkins-home
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home-pvc
