jenkins/jenkins-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: jenkins-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: jenkins
  ports:
    - port: 8080
      targetPort: 8080
