jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jenkins
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"

    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: jenkins-ingress-basic-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Protected Resource'
spec:
  rules:
    - host: jenkins.schq.party
      http:
        paths:
          - path: /?(.*)
            pathType: Exact
            backend:
              service:
                name: jenkins-cluster-ip
                port:
                  number: 8080
  tls:
    - hosts:
        - jenkins.schq.party
      secretName: jenkins-schq-party-tls-cert-secret
